# open-elin

./: .gitignore  LICENSE  PCB-HARDWARE-MAP.md  PLAN.md  README.md  WHAT-YOU-SEE.md  agents.md  blescan.mjs  blescan2.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.web.json  vite.config.ts
.github/: copilot-instructions.md
cli/: package.json  tsconfig.json
documents/: Alternatives · joric_nrfmicro Wiki.htm  DI2-LEVER-BUTTONS.md  OBSERVED-BEHAVIOR.md  PROTOCOL.md  PROTOCOL_NEW.md  WHAT-YOU-SEE.md  di2 button wires.paint  pod pcb back.paint  pod pcb front.paint
e2e/: cogs.demo.spec.ts  device-list.demo.spec.ts  disconnect.demo.spec.ts  fixtures.ts  log.demo.spec.ts  mac-acquisition.demo.spec.ts  mac-advertisement.webbluetooth.spec.ts  motor-params.demo.spec.ts  profile.demo.spec.ts  rename.demo.spec.ts  sidebar.demo.spec.ts
firmware-c/: CMakeLists.txt  README.md  build.ps1  flash.ps1  prj.conf  serial-buttons.ps1  unbrick.ps1
firmware-pod/: CMakeLists.txt  Dockerfile  README.md  build.ps1  flash.ps1  prj.conf  serial-buttons.ps1  test.ps1  unbrick.ps1
firmware-pod/boards/: adafruit_feather_nrf52840.overlay
firmware-pod/src/: app.h  battery.c  battery.h  buttons.c  buttons.h  commands.c  commands.h  gatt.c  gatt.h  led.c  led.h  main.c  protocol.c  protocol.h  radio.c  radio.h
firmware-pod/tests/: Makefile  test_protocol.c
firmware-python/: boot.py  code.py
lib/: package.json
open-elin-firmware-rust/: Cargo.toml  build.rs  flash.ps1  memory.x
open-elin-firmware-rust/src/: main.rs  protocol.rs
(+247 files in other folders)
