[package]
name = "open-elin-firmware-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"

[target.'cfg(target_arch = "arm")'.dependencies]
embassy-executor = { version = "0.10.0", default-features = false, features = ["platform-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.1", default-features = false, features = ["generic-queue-8"] }
embassy-nrf = { version = "0.10.0", default-features = false, features = ["nrf52840", "time-driver-rtc1", "gpiote", "rt"] }
embassy-sync = "0.8.0"
embassy-futures = "0.1.2"

# USB — re-enable after Timer test
# embassy-usb = "0.6.0"
# embassy-usb-logger = "0.6.0"
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
static_cell = "2"

[lib]
name = "open_elin_firmware"
path = "src/protocol.rs"

# [patch.crates-io]
# embassy-nrf = { path = "embassy-nrf-patched" }

[profile.release]
opt-level = "s"
lto = true
